# aveoearthdevs-main-full

./: .gitignore  COMPLETE_TESTING_CHECKLIST.md  ECOMMERCE_ISSUES_REPORT.md  FINAL_TESTING_STATUS.md  FINAL_TEST_RESULTS.md  PRE_LAUNCH_CHECKLIST.md  README.md  TESTING_REPORT.md  TESTING_SUMMARY.md  add_products_and_test.py  add_products_via_api.py  complete_test_all_flows.py  comprehensive_test.py  docker-compose.yml  package-lock.json  package.json  start_all_services.ps1  test_everything.py  test_platform_complete.py
ai/: .env.example  .gitignore  README.md  cloud_database_service.py  database_models.py  database_service.py  env.cloud.example  env.example  init_cloud_database.py  init_database.py  main.py  pyproject.toml  requirements_cloud.txt  requirements_database.txt  simple_test.py  test_ai_service.py  vendor_concierge.py
backend/: .env.backup  .env.new  .gitignore  Dockerfile  add_products_via_api.py  add_test_products.py  brands.csv  check_supabase_config.py  init.sql  main.py  products_categories.csv  pyproject.toml  requirements.txt  update_rpc_function.py  verify_service_role_key.py
backend/.cursor/: mcp.json
backend/app/core/: base.py  config.py  exceptions.py  gcp_storage.py  image_processor.py  image_utils.py  logging.py  memory_store.py  optimized_storage.py  pagination.py  role_auth.py  security.py  supabase_storage.py  user_helper.py  whatsapp.py
backend/app/database/: base.py  indexes.py  session.py
backend/app/features/analytics/models/: user_activity.py
backend/app/features/analytics/routes/: analytics_routes.py  dashboard_routes.py
backend/app/features/auth/cruds/: address_crud.py  (+5 more)
product_verification/: .gitignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  simple_main.py
(+657 files in other folders)
