[project]
name = "productverification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip",
    "fastapi>=0.116.1",
    "ftfy>=6.3.1",
    "python-multipart>=0.0.20",
    "regex>=2025.9.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
